jeff still making minor changes

--- a/models/v3/Aragon_Conviction_Voting_Model.ipynb
+++ b/models/v3/Aragon_Conviction_Voting_Model.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Aragon Conviction Voting Model - Version 3\n",
     "\n",
-    "New to this model are the following elements:\n",
+    "New to this version 3  model are the following elements:\n",
     "\n",
     "* Adding the realism that not all participant tokens are being allocated to proposals at each timestep.\n",
     "* Refactored parameters and system initialization to make more readable and consistent.\n",
