--- a/models/v3/Trigger Function Explanation.ipynb
+++ b/models/v3/Trigger Function Explanation.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Factor out the demonstration of the trigger function from the top of the main simulation notebook\n",
+    "+ add a few more plots and explanations about how and why it works"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
