--- a/models/v3/Aragon_Conviction_Voting_Model.ipynb
+++ b/models/v3/Aragon_Conviction_Voting_Model.ipynb
@@ -105,9 +105,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cadCAD==0.4.18\r\n"
+     ]
+    }
+   ],
    "source": [
     "!pip freeze | grep cadCAD"
    ]
