Jeff's final edit to Deriving Alpha notebook

--- a/models/v3/Deriving_Alpha.ipynb
+++ b/models/v3/Deriving_Alpha.ipynb
@@ -103,13 +103,13 @@
     "\n",
     "The equation $\\hat y(x) = \\frac{x}{(1-\\alpha)}$ tells us precisely that each token in a conviction voting system contributes at most $\\frac{1}{1-\\alpha}$ \"conviction\" toward passing the proposal.\n",
     "\n",
-    "Clearly, this expression goes unstable when $\\alpha =1$, in which case our algorithm diverges. Consider the sum over time to see the instability:\n",
+    "Clearly, this expression goes unstable when $\\alpha =1$, in which case conviction does not decay and our algorithm diverges. Consider the sum over time to see the instability:\n",
     "\n",
     "$\\lim_{T\\rightarrow \\infty} y_T \\ge \\lim_{T\\rightarrow \\infty} \\sum_{t=0}^{T-1} \\bar x = \\infty$\n",
     "\n",
     "for strictly positive values $x_t\\ge \\bar x >0$ as $T\\rightarrow \\infty$.\n",
     "\n",
-    "So in conviction voting we require that $\\alpha\\in [0,1)$. Technically it is legal to set $\\alpha = 0$ at which point this system simply $y_{t+1} = x_t$ sets the conviction to the amount of tokens staked. Although, $x_t$ can still vary overtime, there is no accumulation. The choice of $\\alpha>0$ is made to create a \"leaky integrator\" which takes its name from a leaky bucket analogy.\n",
+    "So in conviction voting we require that $\\alpha\\in [0,1)$. Technically it is legal to set $\\alpha = 0$ at which point this system simply $y_{t+1} = x_t$ sets the conviction to the amount of tokens staked at the current timestep. Although $x_t$ can still vary overtime, there is no accumulation. The choice of $\\alpha>0$ is made to create a \"leaky integrator\" which takes its name from a leaky bucket analogy.\n",
     "![](https://i.imgur.com/JemMMlo.png)\n",
     "\n",
     "The leaky bucket analogy also helps us understand $\\alpha$ in terms of its relationshio to the \"half-life\" of the fluid in the bucket when we turn off the inflow. In this case there is some previously accumated conviction in our initial condition $y_0 >0$ but $x_t = 0$. In this case the dynamics are simply:\n",
