--- a/algorithm_overview.ipynb
+++ b/algorithm_overview.ipynb
@@ -114,7 +114,7 @@
     "___\n",
     "### Summary of State Variables\n",
     "\n",
-    " Notation | Definition|\n",
+    "| Notation | Definition|\n",
     "|--- | --- |\n",
     "|$\\mathcal{A}_t$ | The set of all governance agents/participants at time t |\n",
     "|$\\mathcal{C}_t$ | The set of all candidate proposals at time t |\n",
@@ -171,7 +171,7 @@
     "## Parameters\n",
     "\n",
     "\n",
-    " Notation | Definition|\n",
+    "| Notation | Definition|\n",
     "|--- | --- |\n",
     "|$\\alpha$ | The decay rate for previously accumulated conviction |\n",
     "|$\\beta$ | Upper bound on share of funds dispersed in the example Trigger Function|\n",
