--- a/model_structure.ipynb
+++ b/model_structure.ipynb
@@ -27,11 +27,11 @@
     "In the model folder there exist 5 files and a parts folder, the [```config.py```](model/config.py), [```partial_state_update_block.py```](model/partial_state_update_block.py), [```run.py```](model/run.py), and [```state_variables.py```](model/state_variables.py), and [```state_schema.py```](model/state_schema.py). The [```config.py```](model/config.py) contains the simulation configurations, aggregating the partial states, and the state variables. The [```partial_state_update_block.py```](model/partial_state_update_block.py) contains the partial state update blocks and how they update the state variables. [```state_variables.py```](model/state_variables.py) defines the state variables and [```run.py```](model/run.py) actually runs the simulation. [```state_schema.py```](model/state_schema.py) is specifies the state variable schema, and is used to validate the state variables after the simulation was run.\n",
     "\n",
     "The mechanisms of the model live within the parts subfolder as:\n",
-    "* [```system.py```](model/parts/system.py)\n",
-    "* [```participants.py```](model/parts/participants.py)\n",
-    "* [```proposals.py```](model/parts/proposals.py)\n",
+    "* [```system.py```](models/v3/model/parts/system.py)\n",
+    "* [```participants.py```](models/v3/model/parts/participants.py)\n",
+    "* [```proposals.py```](models/v3/model/parts/proposals.py)\n",
     "\n",
-    "The initial parameters and hyperparameters of the system are defined in [```sys_params.py```](model/sys_params.py) and helper functions, plots, trigger function, etc. are in the [```utils.py```](model/utils.py).\n",
+    "The initial parameters and hyperparameters of the system are defined in [```sys_params.py```](models/v3/model/sys_params.py) and helper functions, plots, trigger function, etc. are in the [```utils.py```](models/v3/model/utils.py).\n",
     "\n",
     "### Note:\n",
     "When running this notebook simulation, be sure to run from \"Kernal\" -> \"Restart & Run All\"\n",
@@ -96,7 +96,7 @@
     "},\n",
     "```\n",
     "A behavior called *minting_rule* is included to record the general expansion of system supply every timestep. The *total_supply* and *funds* state variables are increased with these minted values.\n",
-    "[To see the partial state update's code, click here](model/parts/system.py)\n",
+    "[To see the partial state update's code, click here](models/v3/model/parts/system.py)\n",
     "\n",
     "\n",
     "\n",
@@ -113,7 +113,7 @@
     "},\n",
     "```\n",
     "\n",
-    "In the next phase of the turn, [to see the logic code, click here](model/parts/participants.py), the *check_progress* behavior checks for the completion of previously funded proposals. The code calculates the completion and failure rates as follows:\n",
+    "In the next phase of the turn, [to see the logic code, click here](models/v3/model/parts/participants.py), the *check_progress* behavior checks for the completion of previously funded proposals. The code calculates the completion and failure rates as follows:\n",
     "\n",
     "```\n",
     "likelihood = 1.0/(base_completion_rate+np.log(grant_size))\n",
@@ -142,7 +142,7 @@
     "},\n",
     " ```\n",
     " \n",
-    "The [trigger release function](model/parts/proposals.py) checks to see if each proposal passes or not. If a proposal passes, funds are decremented by the amount of the proposal, while the proposal's status is changed in the network object.\n",
+    "The [trigger release function](models/v3/model/parts/proposals.py) checks to see if each proposal passes or not. If a proposal passes, funds are decremented by the amount of the proposal, while the proposal's status is changed in the network object.\n",
     "\n",
     "```\n",
     "{ \n",
@@ -156,7 +156,7 @@
     "}\n",
     "```\n",
     "\n",
-    "The Participants decide based on their affinity if which proposals they would like to support,[to see the logic code, click here](model/parts/participants.py). Proposals that participants have high affinity for receive more support and pledged tokens than proposals with lower affinity and sentiment. We then update everyone's holdings and their conviction for each proposal.\n",
+    "The Participants decide based on their affinity if which proposals they would like to support,[to see the logic code, click here](models/v3/model/parts/participants.py). Proposals that participants have high affinity for receive more support and pledged tokens than proposals with lower affinity and sentiment. We then update everyone's holdings and their conviction for each proposal.\n",
     "\n",
     "\n",
     "    {\n",
@@ -172,7 +172,7 @@
     "        }\n",
     "    }\n",
     "\n",
-    "The metric section provides basic metrics to observe the health of the system, [to see the logic code, click here](model/parts/metrics.py) Specifically, we are looking for where in the voting lifecycle supply is, and at what stages in the lifecycle the proposals are in. Observing these metrics overtime allows us to ensure the system is working as anticipated and make any structure changes, if required. "
+    "The metric section provides basic metrics to observe the health of the system, [to see the logic code, click here](models/v3/model/parts/metrics.py) Specifically, we are looking for where in the voting lifecycle supply is, and at what stages in the lifecycle the proposals are in. Observing these metrics overtime allows us to ensure the system is working as anticipated and make any structure changes, if required. "
    ]
   }
  ],
