updated file structure

--- a/model_structure.ipynb
+++ b/model_structure.ipynb
@@ -24,14 +24,14 @@
     "* ```Aragon_Conviction_Voting_Model.ipynb```\n",
     "* model\n",
     "\n",
-    "In the model folder there exist 5 files and a parts folder, the [```config.py```](models/v3/model/config.py), [```partial_state_update_block.py```](models/v3/model/partial_state_update_block.py), [```run.py```](model/run.py), and [```state_variables.py```](model/state_variables.py), and [```state_schema.py```](model/state_schema.py). The [```config.py```](model/config.py) contains the simulation configurations, aggregating the partial states, and the state variables. The [```partial_state_update_block.py```](model/partial_state_update_block.py) contains the partial state update blocks and how they update the state variables. [```state_variables.py```](model/state_variables.py) defines the state variables and [```run.py```](model/run.py) actually runs the simulation. [```state_schema.py```](model/state_schema.py) is specifies the state variable schema, and is used to validate the state variables after the simulation was run.\n",
+    "In the model folder there exist 5 files and a parts folder, the [```config.py```](models/v3/model/config.py), [```partial_state_update_block.py```](models/v3/model/partial_state_update_block.py), [```run.py```](models/v3/model/run.py), and [```state_variables.py```](models/v3/model/state_variables.py), and [```state_schema.py```](models/v3/model/state_schema.py). The [```config.py```](models/v3/model/config.py) contains the simulation configurations, aggregating the partial states, and the state variables. The [```partial_state_update_block.py```](models/v3/model/partial_state_update_block.py) contains the partial state update blocks and how they update the state variables. [```state_variables.py```](models/v3/model/state_variables.py) defines the state variables and [```run.py```](models/v3/model/run.py) actually runs the simulation. [```state_schema.py```](models/v3/model/state_schema.py) is specifies the state variable schema, and is used to validate the state variables after the simulation was run.\n",
     "\n",
     "The mechanisms of the model live within the parts subfolder as:\n",
     "* [```system.py```](models/v3/model/parts/system.py)\n",
     "* [```participants.py```](models/v3/model/parts/participants.py)\n",
     "* [```proposals.py```](models/v3/model/parts/proposals.py)\n",
     "\n",
-    "The initial parameters and hyperparameters of the system are defined in [```sys_params.py```](models/v3/model/sys_params.py) and helper functions, plots, trigger function, etc. are in the [```utils.py```](models/v3/model/utils.py).\n",
+    "The initial parameters and hyperparameters of the system are defined in [```sys_params.py```](models/v3/model/parts/sys_params.py) and helper functions, plots, trigger function, etc. are in the [```utils.py```](models/v3/model/parts/utils.py).\n",
     "\n",
     "### Note:\n",
     "When running this notebook simulation, be sure to run from \"Kernal\" -> \"Restart & Run All\"\n",
@@ -142,7 +142,7 @@
     "},\n",
     " ```\n",
     " \n",
-    "The [trigger release function](models/v3/model/parts/proposals.py) checks to see if each proposal passes or not. If a proposal passes, funds are decremented by the amount of the proposal, while the proposal's status is changed in the network object.\n",
+    "The [logic](models/v3/model/parts/proposals.py) checks to see if each proposal passes or not. If a proposal passes, funds are decremented by the amount of the proposal, while the proposal's status is changed in the network object.\n",
     "\n",
     "```\n",
     "{ \n",
