updated utils and abstracted trigger func

--- a/model_structure.ipynb
+++ b/model_structure.ipynb
@@ -30,6 +30,7 @@
     "* [```system.py```](models/v3/model/parts/system.py)\n",
     "* [```participants.py```](models/v3/model/parts/participants.py)\n",
     "* [```proposals.py```](models/v3/model/parts/proposals.py)\n",
+    "* [```metrics.py```](models/v3/model/parts/metrics.py)\n",
     "\n",
     "The initial parameters and hyperparameters of the system are defined in [```sys_params.py```](models/v3/model/parts/sys_params.py) and helper functions, plots, trigger function, etc. are in the [```utils.py```](models/v3/model/parts/utils.py).\n",
     "\n",
@@ -172,7 +173,7 @@
     "        }\n",
     "    }\n",
     "\n",
-    "The metric section provides basic metrics to observe the health of the system, [to see the logic code, click here](models/v3/model/parts/metrics.py) Specifically, we are looking for where in the voting lifecycle supply is, and at what stages in the lifecycle the proposals are in. Observing these metrics overtime allows us to ensure the system is working as anticipated and make any structure changes, if required. "
+    "The metrics section provides basic metrics to observe the health of the system, [to see the logic code, click here.](models/v3/model/parts/metrics.py) Specifically, we are looking for where in the voting lifecycle supply is, and at what stages in the lifecycle the proposals are in. Observing these metrics over time allows us to ensure the system is working as anticipated and make any structure changes, if required. \n"
    ]
   }
  ],
