adding next steps

--- a/models/v3/Aragon_Conviction_Voting_Model.ipynb
+++ b/models/v3/Aragon_Conviction_Voting_Model.ipynb
@@ -1540,7 +1540,18 @@
     "    * Introducing heterogeneous token holdings would be another next step in creating a model more representative of the live system\n",
     "* Proposals which are good or no good together\n",
     "    * Introducing conflict \n",
-    "* Affects of outcomes on sentiment"
+    "* Affects of outcomes on sentiment\n",
+    "\n",
+    "\n",
+    "## Additional Considerations when Deploying CV\n",
+    "* **Timescales**: whether your system is operating in block times, or more human understandable timescales like hours, days, or weeks, these considerations need to be factored into your model\n",
+    "* **Minimum candidacy times** proposals should be active for a minimum period to ensure appropriate dialog occurs within the community, regardless of level of support\n",
+    "* **Minimum conviction required** for small proposals\n",
+    "to prevent small proposal spamming from draining the communal funding pool, all proposals should have some minimum conviction required to pass\n",
+    "* **Effective supply**\n",
+    "to avoid slow conviction aggregation due to \"inactive\" tokens (e.g. locked up in cold storage or liquidity pool, without active participation in governance), effective supply is the portion of tokens that are active in community governance\n",
+    "* **Proposal Approval & Feedback Process**\n",
+    "the proposal process could make use of additional mechanisms like fund escrow, proposal backlog processes, reviews/validation & disputability/contestation to ensure that the incentive to game the system is kept to a minimum through responsible community oversight"
    ]
   }
  ],
